# SDL_GAME

./: CMakeLists.txt  MenuState.cpp  Platformer.sublime-project  Platformer.sublime-workspace  compile_commands.json  error.txt
include/: Enemy.hpp  Game.hpp  GameObject.hpp  GameStateMachine.hpp  GameStates.hpp  InputHandler.hpp  MenuButton.hpp  MenuState.hpp  PlayState.hpp  Player.hpp  TextureManager.hpp  Vector.hpp  Vendors.hpp
src/: Enemy.cpp  Game.cpp  GameObject.cpp  GameStateMachine.cpp  InputHandler.cpp  MenuButton.cpp  MenuState.cpp  PlayState.cpp  Player.cpp  TextureManager.cpp  Vector.cpp  main.cpp
